<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tetradev.farmeroapp.aboutus"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bangers"
        android:gravity="center|top"
        android:padding="20dp"
        android:text="Farmero"
        android:textColor="#40DF9F"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center|top"
        android:padding="50dp"
        android:text="@string/aboutus"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center|top"
        android:padding="10dp"
        android:text="@string/name1"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center|top"
        android:padding="40dp"
        android:text="@string/name2"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center|top"
        android:padding="70dp"
        android:text="@string/name3"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center|top"
        android:padding="100dp"
        android:text="@string/name4"
        android:textColor="@android:color/white"
        android:textSize="18sp" />



</RelativeLayout>
